--- a/HTML_CSS/WebDesign/PyWebDev/style.css
+++ b/HTML_CSS/WebDesign/PyWebDev/style.css
@@ -398,6 +398,63 @@ body {
   border-radius: 20rem;
 }
 
+.member-icons-container {
+  margin-top: 7px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.member-contact-icons {
+  font-size: 2rem;
+}
+
+/* FLIP CARD STYLES */
+
+.flip-card {
+  perspective: 1000px;
+}
+
+.flip-card-inner {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  transition: transform 0.7s;
+  transform-style: preserve-3d;
+  backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+}
+
+.flip-card:focus {
+  outline: 0;
+}
+
+.flip-card:hover .flip-card-inner,
+.flip-card:focus .flip-card-inner {
+  transform: rotateY(180deg);
+}
+.flip-card-front,
+.flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.flip-card-front {
+  color: black;
+  z-index: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.flip-card-back {
+  color: black;
+  transform: rotateY(180deg);
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 /* ******************************************* */
 /* SECTION-COURSES */
 /* ******************************************* */
@@ -411,6 +468,12 @@ body {
   box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
   /* Eliminates the need to add border radius to image element */
   overflow: hidden;
+  transition: all 0.4s;
+}
+
+.course:hover {
+  transform: translateY(-1.8rem);
+  box-shadow: 0 3.2rem 6.4rem rgba(0, 0, 0, 0.09);
 }
 
 .course-image {
@@ -462,6 +525,26 @@ body {
   margin: 0.4rem 0.3rem;
   background-color: #ffcd75;
   border-radius: 8px;
+}
+
+/* ******************************************* */
+/* SECTION-TESTIMONIALS */
+/* ******************************************* */
+
+.section-testimonial {
+  padding: 9.6rem 12rem;
+}
+
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  overflow: hidden;
+}
+
+.gallery img {
+  width: 1rem;
+  min-width: 100%;
+  min-height: 100%;
 }
 
 /* ******************************************* */
