added background image to Courses section

--- a/HTML_CSS/WebDesign/PyWebDev/style.css
+++ b/HTML_CSS/WebDesign/PyWebDev/style.css
@@ -465,6 +465,7 @@ a {
 /* ******************************************* */
 .section-courses {
   padding: 9.6rem 0;
+  background-image: url("../images/backgrounds/courses-background-3.png");
 }
 
 .course {
